Tela do quiz construida + Responsividade + funcionalidades do quiz

--- a/Html/index.html
+++ b/Html/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="container"> 
-    <div class="col-sm-6">
+    <div class="menu">
         
         <div id="titulo">
             <h1>Naruto Quest</h1>
