--- a/Html/iniciar.html
+++ b/Html/iniciar.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link href="https://db.onlinewebfonts.com/c/73fedd912ba11f583a359ce4c2e742ed?family=Ninja+Naruto+V1" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="flex-container">
+        <div class="quiz">
+            <div id="pergunta"></div>
+            <div class="opcoes">
+                <button class="opcao" id="opcao1"></button>
+                <button class="opcao" id="opcao2"></button>
+                <button class="opcao" id="opcao3"></button>
+                <button class="opcao" id="opcao4"></button>
+                <button class="opcao"><a href="index.html"> Retornar ao menu </a></button>
+                <div id="resultado"></div>
+            </div>
+        </div>
+    </div>
+    <script src="../js/script.js"></script>
 </body>
 </html>
