--- a/Html/iniciar.html
+++ b/Html/iniciar.html
@@ -10,23 +10,20 @@
 <body>
     <div class="flex-container">
         <div class="quiz">
-        <audio id="audioOpcoes" src="../Audio/naruto.mp3"></audio>
+        <audio id="audioOpcoes" src="../Audio/Musica 2.wav"></audio>
             <div id="pergunta"></div>
-            <div class="opcoes">
-                <button class="opcao" id="opcao1"></button>
-                <button class="opcao" id="opcao2"></button>
-                <button class="opcao" id="opcao3"></button>
-                <button class="opcao" id="opcao4"></button>
-            </div>
-            
+                <div class="opcoes">
+                    <button class="opcao"></button>
+                    <button class="opcao"></button>
+                    <button class="opcao"></button>
+                    <button class="opcao"></button>
+                </div>
         </div>
         <div id="resultado" class="escondido"></div>
         <button id="voltar"><a href="index.html"> Retornar ao menu </a></button>
         <div id="pontuacao"></div>
         <div id="mensagem"></div>
     </div>
-
-    
     <script src="../js/script.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/jquery.js"></script>
