Adicionando condicao quando termina o quiz(80% concluido)

--- a/Html/iniciar.html
+++ b/Html/iniciar.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     <div class="flex-container">
+        <button id="voltar"><a href="index.html"> Retornar ao menu </a></button>
+        <img id="imagem" src="../img/foto.jpg">
+        <div id="mensagem"></div>
+        <div id="texto"></div>
+        <div class="alternativas">
+            <button class="alternativa"> SIM </button>
+            <button class="alternativa"> NAO </button>
+        </div>  
         <div class="quiz">
         <audio id="audioOpcoes" src="../Audio/Musica 2.wav"></audio>
             <div id="pergunta"></div>
@@ -19,10 +27,9 @@
                     <button class="opcao"></button>
                 </div>
         </div>
+        
         <div id="resultado" class="escondido"></div>
-        <button id="voltar"><a href="index.html"> Retornar ao menu </a></button>
-        <div id="pontuacao"></div>
-        <div id="mensagem"></div>
+        <div id="pontuacao"></div> 
     </div>
     <script src="../js/script.js"></script>
     <script src="../js/bootstrap.min.js"></script>
