Adicionado randomicacao das opcoes + alteracoes no visual

--- a/Html/iniciar.html
+++ b/Html/iniciar.html
@@ -6,6 +6,7 @@
     <title>Iniciar</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://db.onlinewebfonts.com/c/73fedd912ba11f583a359ce4c2e742ed?family=Ninja+Naruto+V1" rel="stylesheet">
+    <link rel="icon" href="../img/simbolo oficial.png" type="image/png">
 </head>
 <body>
     <div class="flex-container">
@@ -19,8 +20,8 @@
             </div>  
         </div>
         <div class="palavra">
-            <div id="mensagem"></div>
-            <div id="pontuacao"></div>
+            <div class="encerramento"></div>
+            <div class="encerramento"></div>
         </div>
         <div class="quiz">
         <audio id="audioOpcoes" src="../Audio/Musica 2.wav"></audio>
