inserindo imagens de retorno a resposta + visual da aplicacao

--- a/Html/index.html
+++ b/Html/index.html
@@ -14,6 +14,7 @@
         <div id="titulo">
             <h1>Naruto Quest</h1>
         </div>
+        <audio id="myAudio" src="../Audio/Musica 2.wav"></audio>
         <div class="botoes"> 
             <button class="botao" onclick="tocar()"> Iniciar </button>
             <button class="botao" onclick="tocar()"> Sobre </button>
