--- a/Html/iniciar.html
+++ b/Html/iniciar.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="flex-container">
-        <button id="voltar"><a href="index.html"> Retornar ao menu </a></button>
-        <img id="imagem" src="../img/foto.jpg">
+        <button id="voltar"><a href="index.html"> Retornar ao menu </a></button> 
+        <div id="imagem"></div>
         <div class="final">
             <h2 id="texto">Questoes respondidas. Deseja ver o resultado?</h2>
             <div class="alternativas">
@@ -34,7 +34,7 @@
                 </div>
         </div>
         <div id="resultado" class="escondido"></div> 
-    </div>
+    </img>
     <script src="../js/script.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/jquery.js"></script>
